# SIN-Code-Goal-Mode-Skill

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
scripts/: goal-checkpoint.sh  goal-checkpoint.sh.doc.md  goal-complete.sh  goal-complete.sh.doc.md  goal-list.sh  goal-list.sh.doc.md  goal-report.sh  goal-report.sh.doc.md  goal-rollback.sh  goal-rollback.sh.doc.md  goal-start.sh  goal-start.sh.doc.md  goal-status.sh  goal-status.sh.doc.md
src/sin_goal_mode/: __init__.doc.md  __init__.py  checkpointer.doc.md  checkpointer.py  executor.doc.md  executor.py  goals.doc.md  goals.py  persistence.doc.md  persistence.py  reporter.doc.md  reporter.py  server.doc.md  server.py  tracker.doc.md  tracker.py
src/sin_goal_mode/cli_shims/: __init__.py  goal_checkpoint.py  goal_complete.py  goal_list.py  goal_report.py  goal_rollback.py  goal_start.py  goal_status.py  goal_subtask.py
tests/: test_checkpointer.doc.md  test_checkpointer.py  test_executor.doc.md  test_executor.py  test_goals.doc.md  test_goals.py  test_persistence.doc.md  test_persistence.py  test_reporter.doc.md  test_reporter.py  test_server.doc.md  test_server.py  test_tracker.doc.md  test_tracker.py
